ENABLE_QT()

# Header files.
FILE(GLOB DUMMY_HDRS *.h)
QT4_WRAP_CPP(MOC_DUMMY_SRCS ${DUMMY_HDRS})

# Source files.
FILE(GLOB DUMMY_SRCS *.cpp)
SET(DUMMY_SRCS
  ${DUMMY_HDRS}
  ${DUMMY_SRCS})


ADD_EXECUTABLE(dummy_viewer ${DUMMY_SRCS} ${MOC_DUMMY_SRCS})

TARGET_LINK_LIBRARIES(dummy_viewer
   ui  
   ${QT_QTCORE_LIBRARY_DEBUG}
   ${QT_QTGUI_LIBRARY_DEBUG}
   ${QT_QTNETWORK_LIBRARY_DEBUG}
   ${QT_QTDBUS_LIBRARY_DEBUG})

